--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ header .container {
     flex-wrap: wrap;
 }
 
+#toIndex {
+    text-decoration: none;
+    color: #444;
+}
+
 h1 { margin: 0; font-size: 1.3rem; color: #444; }
 
 nav ul {
